@@ -174,8 +174,8 @@ drop database hcat_database_1;\
                                  'num' => 1
                                 ,'hcat' => q"
 drop table if exists hcat_view_1;
-drop table if exists hcat_view_1_1;
-drop table if exists hcat_view_1_2;
+drop view if exists hcat_view_1_1;
+drop view if exists hcat_view_1_2;
 create external table hcat_view_1 (name string, age int, gpa double) row format delimited fields terminated by '\t' stored as TEXTFILE location '/user/hcat/tests/data/studenttab10k';
 create view hcat_view_1_1 as select name, gpa, age from studenttab10k;
 create view hcat_view_1_2 partitioned on (age) as select name, gpa, age from studenttab10k;
@@ -183,7 +183,6 @@ alter view hcat_view_1_1 set tblproperties('key'='value');
 show tables;
 describe hcat_view_1_1;
 describe hcat_view_1_2;
-alter view hcat_view_1_2 rename to hcat_view_1_3;
 drop view hcat_view_1_1;
 drop view hcat_view_1_3;"
                                 ,'rc'   => 0
